--- a/PiCloud/settings/secrets.json.example
+++ b/PiCloud/settings/secrets.json.example
@@ -1,5 +1,10 @@
 {
   "SECRET_KEY": "not so secret",
+  "ALLOWED_HOSTS": [
+    "127.0.0.1",
+    "localhost",
+    "picloud.pw"
+  ],
   "GOOGLE_RECAPTCHA_SECRET_KEY": "put here your recaptcha secret key",
   "DEFAULT_DATABASE": {
     "ENGINE": "django.db.backends.postgresql_psycopg2",
