Remove vk_group_list from secrets; update secrets.json.example

--- a/PiCloud/settings/secrets.json.example
+++ b/PiCloud/settings/secrets.json.example
@@ -18,10 +18,14 @@
   "EMAIL_HOST_USER": "somebody@example.com",
   "EMAIL_HOST_PASSWORD": "mail password",
   "EMAIL_PORT": 587,
+
+  "SOCIAL_AUTH_GOOGLE_OAUTH2_KEY": "",
+  "SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET": "",
+  "SOCIAL_AUTH_GITHUB_KEY": "",
+  "SOCIAL_AUTH_GITHUB_SECRET": "",
+  "SOCIAL_AUTH_VK_OAUTH2_KEY": "",
+  "SOCIAL_AUTH_VK_OAUTH2_SECRET": "",
+
   "VK_GLOBAL_TOKEN": "vk api token",
   "VK_GROUP_TOKEN": "vk group token",
-  "VK_GROUP_LIST": [
-    "picloudpw",
-    "wisemrduck"
-  ]
 }
