--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-Django==2.2.13
-social-auth-app-django==3.1.0
-feedparser
-Pillow
-psycopg2-binary
-python-dateutil
-six
-bleach
-markdown
-vk
+Django==4.2.7
+social-auth-app-django==5.3.0
+feedparser==6.0.2
+Pillow==8.1.0
+psycopg2-binary==2.9.6
+python-dateutil==2.8.1
+six==1.15.0
+bleach==3.3.0
+markdown==3.3.3
+vk==2.0.2
+pytz==2021.1
+
+importlib-metadata==3.4.0
