--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   picloud-postgres:
     image: postgres
     container_name: picloud-postgres
-    restart: always
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_USER=picloud
       - POSTGRES_PASSWORD=picloud
