--- a/website/static/pwa/manifest.json
+++ b/website/static/pwa/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/static/website/img/favicon.png",
+      "src": "/static/img/favicon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
