--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==4.2.7
 gunicorn==20.1.0
 
 social-auth-app-django==5.3.0
+django-editorjs-fields==0.2.7
+
 feedparser==6.0.2
 Pillow==8.1.0
 psycopg2-binary==2.9.6
